New features introduced and bug fixes ( check ChangeLog.txt )