@@ -1,6 +1,6 @@
 /*
 File: ExplorerPanel.java ; This file is part of Twister.
-Version: 2.002
+Version: 2.003
 
 Copyright (C) 2012-2013 , Luxoft
 
@@ -279,8 +279,9 @@ public class ExplorerPanel extends JPanel {
                 && (tree.getModel().isLeaf(tree.getSelectionPath()
                         .getLastPathComponent()))
                 && ((editable.indexOf(".tcl") != -1)
-                        || (editable.indexOf(".py") != -1) || (editable
-                        .indexOf(".pl") != -1))) {
+                        || (editable.indexOf(".py") != -1)
+                        || (editable.indexOf(".java") != -1)
+                        || (editable.indexOf(".pl") != -1))) {
             item = new JMenuItem("Edit");
             p.add(item);
             item.addActionListener(new ActionListener() {
@@ -390,8 +391,7 @@ public class ExplorerPanel extends JPanel {
                     File file2 = copyFileLocaly(remotefilename, localfilename);
                     String execute = Repository.getEditors().get(ID)
                             .getAsString();
-                    System.out.println("Running: " + execute);
-                    executeCommand(execute + " " + localfilename);
+                    executeCommand(execute,localfilename);
                     sendFileToServer(file2, remotefilename);
                     file2.delete();
                 }
@@ -496,8 +496,8 @@ public class ExplorerPanel extends JPanel {
             openEmbeddedEditor(editable, remotefilename, localfilename);
         } else {
             File file2 = copyFileLocaly(remotefilename, localfilename);
-            executeCommand(Repository.getEditors().get(defaulteditor) + " "
-                    + localfilename);
+            executeCommand(Repository.getEditors().get(defaulteditor).toString(),
+                           localfilename);
             sendFileToServer(file2, remotefilename);
             file2.delete();
         }
@@ -530,11 +530,13 @@ public class ExplorerPanel extends JPanel {
     /*
      * executes the command for opening an editor
      */
-    public void executeCommand(String command) {
+    public void executeCommand(String command, String arg) {
         try {
             String line;
+            command = command.replace("\\", "\\\\");
+            arg = arg.replace("\\", "\\\\");
             System.out.println("Executing " + command + " command");
-            Process p = Runtime.getRuntime().exec(command);
+            Process p = Runtime.getRuntime().exec(new String[]{command,arg});
             p.waitFor();
             System.out.println(p.exitValue());
         } catch (Exception err) {
@@ -583,7 +585,7 @@ public class ExplorerPanel extends JPanel {
         textarea.getDocument().putProperty(PlainDocument.tabSizeAttribute, 4);
         if (editable.indexOf(".tcl") != -1) {
             textarea.setTokenMarker(new TCLTokenMarker());
-        } else if (editable.indexOf(".py") != -1) {
+        } else if (editable.indexOf(".py") != -1 || editable.indexOf(".java") != -1) {
             textarea.setTokenMarker(new PythonTokenMarker());
         } else if (editable.indexOf(".pl") != -1) {
             textarea.setTokenMarker(new PerlTokenMarker());
